MOSIP-38111 & MOSIP-38042 & MOSIP-40796 - Enhanced the masterdata testrig with respect to the changes done from server side
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/api-test/src/main/resources/masterdata/FetchBlockListedWordByLangcode/FetchBlockListedWordByLangcode.yml
+++ b/api-test/src/main/resources/masterdata/FetchBlockListedWordByLangcode/FetchBlockListedWordByLangcode.yml
@@ -28,8 +28,8 @@ FetchBlockListedWordByLangcode:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-008",
-      "message": "Blocklisted word not found"
+      "errorCode": "KER-MSD-023",
+      "message": "Invalid language code"
     }
   ]
 }'    
