--- a/api-test/src/main/resources/masterdata/FetchDocumentTypes/FetchDocumentTypes.yml
+++ b/api-test/src/main/resources/masterdata/FetchDocumentTypes/FetchDocumentTypes.yml
@@ -15,8 +15,8 @@ FetchDocumentTypes:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-118",
-      "message": "Document Type not found"
+      "errorCode": "KER-MSD-023",
+      "message": "Invalid language code"
     }
   ]
 }'
