--- a/api-test/src/main/resources/masterdata/GetDocumentTypeByLangCode/GetDocumentTypeByLangCode.yml
+++ b/api-test/src/main/resources/masterdata/GetDocumentTypeByLangCode/GetDocumentTypeByLangCode.yml
@@ -34,8 +34,8 @@ GetDocumentTypeByLangCode:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-118",
-      "message": "Document Type not found"
+      "errorCode": "KER-MSD-023",
+      "message": "Invalid language code"
     }
   ]
 }'
