MOSIP-37901: exclude mosip services
Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -506,6 +506,7 @@
 							<serverId>ossrh</serverId>
 							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 							<autoReleaseAfterClose>false</autoReleaseAfterClose>
+							<skipStaging>true</skipStaging>
 						</configuration>
 					</plugin>
 				</plugins>
