MOSIP-37901: exclude mosip services
Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -478,7 +478,7 @@
 						<executions>
 							<execution>
 								<id>default-deploy</id>
-								<phase>none</phase>
+								<phase>deploy</phase>
 								<goals>
 									<goal>deploy</goal>
 								</goals>
