MOSIP-37901: exclude mosip services (#1200)
* MOSIP-37901: exclude mosip services

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

* MOSIP-37901: exclude mosip services

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

---------

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -478,7 +478,7 @@
 						<executions>
 							<execution>
 								<id>default-deploy</id>
-								<phase>none</phase>
+								<phase>deploy</phase>
 								<goals>
 									<goal>deploy</goal>
 								</goals>
@@ -506,6 +506,7 @@
 							<serverId>ossrh</serverId>
 							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 							<autoReleaseAfterClose>false</autoReleaseAfterClose>
+							<skipStaging>true</skipStaging>
 						</configuration>
 					</plugin>
 				</plugins>
