added spring path pattern support [MOSIP-41039]
Signed-off-by: GOKULRAJ136 <110164849+GOKULRAJ136@users.noreply.github.com>

--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -283,3 +283,6 @@ auth.allowed.urls=http://localhost:5000/
 
 mosip.iam.certs_endpoint=http://localhost:5000/auth/realms/mosip/protocol/openid-connect/certs
 mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
+
+#Spring AntPathMatcher for flexible path pattern support
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
