--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -400,3 +400,6 @@ zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
 mosip.kernel.masterdata.value.validate.regex=[^a-z0-9]
 mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
+
+#Spring AntPathMatcher for flexible path pattern support
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
