--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -178,3 +178,6 @@ syncdata.cache.snapshot.cron=0 0 23 * * *
 
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip'}
 mosip.kernel.keymanager.unique.identifier.autoupdate=false
+
+#Spring AntPathMatcher for flexible path pattern support
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
