--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -2,13 +2,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.mosip.masterdata</groupId>
+	<groupId>io.mosip.admin</groupId>
 	<artifactId>apitest-masterdata</artifactId>
 	<packaging>jar</packaging>
 	<name>apitest-masterdata</name>
 	<description>Parent project of MOSIP Admin Services apitests</description>
 	<url>https://github.com/mosip/admin-services</url>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.3.0-RC</version>
 
 	<licenses>
 		<license>
@@ -49,7 +49,7 @@
 		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
 
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-masterdata-1.2.1-SNAPSHOT-jar-with-dependencies</fileName>
+		<fileName>apitest-masterdata-1.3.0-RC-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
