--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -49,7 +49,7 @@
 		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
 
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-masterdata-1.3.0-RC</fileName>
+		<fileName>apitest-masterdata-1.3.0-RC-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
