--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -8,7 +8,7 @@
 	<name>apitest-masterdata</name>
 	<description>Parent project of MOSIP Admin Services apitests</description>
 	<url>https://github.com/mosip/admin-services</url>
-	<version>1.3.0-RC</version>
+	<version>1.3.0-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -47,9 +47,8 @@
 		<maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
 		<maven.antrun.plugin.version>3.0.0</maven.antrun.plugin.version>
 		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
-
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-masterdata-1.3.0-RC</fileName>
+		<fileName>apitest-masterdata-1.3.0-SNAPSHOT-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
