--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -18,7 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springdoc.version>1.8.0</springdoc.version>
 		<mosip.commons.packetmanager.version>1.3.0-beta.1</mosip.commons.packetmanager.version>
-		<kernel.core.version>1.3.0-beta.2-SNAPSHOT</kernel.core.version>
+		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
@@ -26,6 +26,7 @@
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
 		<maven.jacoco.version>0.8.11</maven.jacoco.version>
+		<kernel.bom.version>1.3.0-beta.2</kernel.bom.version>
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
@@ -39,7 +40,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>${kernel.core.version}</version>
+				<version>${kernel.bom.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
