--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -27,10 +27,10 @@
 		<mockito.version>3.3.3</mockito.version>
 
 		<!-- kernel properties -->
-		<kernel-core.version>1.3.0-beta.2-SNAPSHOT</kernel-core.version>
-		<kernel.bom.version>1.3.0-beta.2-SNAPSHOT</kernel.bom.version>
-		<kernel-websubclient-api.version>1.3.0-beta.2-SNAPSHOT</kernel-websubclient-api.version>
-		<kernel-logger-logback.version>1.3.0-beta.2-SNAPSHOT</kernel-logger-logback.version>
+		<kernel-core.version>1.3.0-beta.2</kernel-core.version>
+		<kernel.bom.version>1.3.0-beta.2</kernel.bom.version>
+		<kernel-websubclient-api.version>1.3.0-beta.2</kernel-websubclient-api.version>
+		<kernel-logger-logback.version>1.3.0-beta.2</kernel-logger-logback.version>
 		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
