--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -82,12 +82,13 @@
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.core.version>1.3.0-beta.2-SNAPSHOT</kernel.core.version>
+		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
 		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
-		<kernel.logger.version>1.3.0-beta.2-SNAPSHOT</kernel.logger.version>
+		<kernel.logger.version>1.3.0-beta.2</kernel.logger.version>
 		<kernel.crypto.version>1.3.0-beta.2-SNAPSHOT</kernel.crypto.version>
-		<kernel.keymanager.version>1.3.0-beta.2-SNAPSHOT</kernel.keymanager.version>
-		<kernel-websubclient-api.version>1.3.0-beta.2-SNAPSHOT</kernel-websubclient-api.version>
+		<kernel.keymanager.version>1.3.0-beta.2</kernel.keymanager.version>
+		<kernel.bom.version>1.3.0-beta.2</kernel.bom.version>
+		<kernel-websubclient-api.version>1.3.0-beta.2</kernel-websubclient-api.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
 	</properties>
@@ -118,7 +119,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>${kernel.core.version}</version>
+				<version>${kernel.bom.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
