--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -108,13 +108,11 @@
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.applicant-type.version>1.3.0-beta.2-SNAPSHOT</kernel.applicant-type.version>
+		<kernel.applicant-type.version>1.3.0-beta.2</kernel.applicant-type.version>
 		<kernel.logger.logback.version>1.3.0-beta.2</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
 		<kernel.websubclient.api.version>1.3.0-beta.2</kernel.websubclient.api.version>
 		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
-		<kernel.bom.version>1.3.0-beta.2</kernel.bom.version>
-		<kernel.bom.version>1.3.0-beta.2</kernel.bom.version>
 		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
@@ -145,7 +143,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>${kernel.bom.version}</version>
+				<version>${kernel.core.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
