--- a/api-test/src/main/resources/config/masterdata.properties
+++ b/api-test/src/main/resources/config/masterdata.properties
@@ -3,49 +3,48 @@
 #------------------------ Environment URLs and Database Connections ------------------------#
 
 # Keycloak URL.
-keycloak-external-url = https://iam.qa-java21.mosip.net
+keycloak-external-url = https://iam.released.mosip.net
 
 # PostgreSQL URLs for audit and partner databases.
-audit_url = jdbc:postgresql://qa-java21.mosip.net:5432/mosip_audit
-partner_url = jdbc:postgresql://qa-java21.mosip.net:5432/mosip_ida
+audit_url = jdbc:postgresql://released.mosip.net:5432/mosip_audit
+partner_url = jdbc:postgresql://released.mosip.net:5432/mosip_ida
 
 # Database server for connections.
-db-server = qa-java21.mosip.net
-
+db-server = api-internal.released.mosip.net
+db-port = 5433
 
 #------------------------ secrets and passwords  ------------------------#
 
 #------------------------ Keycloak Passwords ------------------------#
 # Used for Keycloak authentication.
-keycloak_Password = 
+keycloak_Password = DyWRaJqTFh
 
 #------------------------ PostgreSQL Database Passwords ------------------------#
 # Credentials for connecting to Postgres databases.
-audit_password = 
-partner_password = 
-postgres-password = 
+audit_password = WfJpMctLjp
+partner_password = WfJpMctLjp
+postgres-password = WfJpMctLjp
 
 #-------- Client Secret Keys ----------#
 # These keys are used for various services, make sure to update the values as required when running locally.
 
-mosip_partner_client_secret = 
-mosip_pms_client_secret = 
-mosip_resident_client_secret = 
-mosip_idrepo_client_secret = 
-mosip_reg_client_secret = 
-mosip_admin_client_secret = 
-mosip_hotlist_client_secret = 
-mosip_regproc_client_secret = 
-mpartner_default_mobile_secret = 
-mosip_testrig_client_secret = 
-AuthClientSecret = 
-mosip_crvs1_client_secret = 
+mosip_partner_client_secret = w6z9XQQ6Toi5vzzY
+mosip_pms_client_secret = 3XiMpmPfAAzT47EC
+mosip_resident_client_secret = MiTOjWLVoFZw3CHZ
+mosip_idrepo_client_secret = qKNTW5CTxKsgVGjw
+mosip_reg_client_secret = Msc7sItq6Rg8vcEC
+mosip_admin_client_secret = auWjWiniqX0YX8KF
+mosip_hotlist_client_secret = lA7pCSLknLvT9Owj
+mosip_regproc_client_secret = rR5eKHfG4i3BJf8S
+mpartner_default_mobile_secret = duo1HolnpqNc6aMA
+mosip_testrig_client_secret = G9qAJ3SrOm575GqL
+AuthClientSecret = MiTOjWLVoFZw3CHZ
 
 
 #-------- Generic Configuration ----------#
 
 # Enable or disable debugging mode (yes/no).
-enableDebug = no
+enableDebug = yes
 
 # Whether to use pre-configured OTP (true/false).
 usePreConfiguredOtp = false
@@ -72,7 +71,7 @@ moduleNamePattern =
 #------------------------ Uncomment for Local Run ------------------------#
 
 # Path to the authentication certificates (if running locally, uncomment the below line and keep the value empty).
-# authCertsPath =
+authCertsPath =
 
 # X-XSS-Protection: Controls the XSS (Cross-Site Scripting) filter in browsers.
 # Values: (yes/no)
