--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,17 +7,17 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.2.1-rc1</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1-rc1</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springdoc.version>1.8.0</springdoc.version>
-		<kernel.version>1.2.1-SNAPSHOT</kernel.version>
+		<kernel.version>1.2.1-rc1</kernel.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
@@ -28,13 +28,15 @@
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+		<spring.boot.version>3.2.5</spring.boot.version>
+		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.2.1-SNAPSHOT</version>
+				<version>1.2.1-rc1</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -239,11 +241,23 @@
 			</exclusions>
 		</dependency>-->
 	</dependencies>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/api/v1/publisher</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.version}</version>
 				<configuration>
 					<executable>true</executable>
 					<layout>ZIP</layout>
@@ -254,6 +268,9 @@
 							<goal>build-info</goal>
 							<goal>repackage</goal>
 						</goals>
+						<configuration>
+							<attach>false</attach>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -315,16 +332,39 @@
 <build>
 	<plugins>
 		<plugin>
+			<groupId>org.sonatype.central</groupId>
+			<artifactId>central-publishing-maven-plugin</artifactId>
+			<version>${central.publishing.maven.plugin.version}</version>
+			<extensions>true</extensions>
+			<configuration>
+				<publishingServerId>ossrh</publishingServerId>
+				<autoPublish>false</autoPublish>
+			</configuration>
+		</plugin>
+		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
-			<version>3.2.3</version>
+			<version>${spring.boot.version}</version>
 			<configuration>
 				<executable>true</executable>
 				<layout>ZIP</layout>
 			</configuration>
 			<executions>
+				<!-- Build info and repackage -->
+				<execution>
+					<id>build-info-repackage</id>
+					<goals>
+						<goal>build-info</goal>
+						<goal>repackage</goal>
+					</goals>
+					<configuration>
+						<attach>false</attach>
+					</configuration>
+				</execution>
+				<!-- Integration test startup -->
 				<execution>
 					<id>pre-integration-test</id>
+					<phase>pre-integration-test</phase>
 					<goals>
 						<goal>start</goal>
 					</goals>
@@ -333,25 +373,20 @@
 							<folder>src/test/resources</folder>
 						</folders>
 						<profiles>
-							<profile>test</profile>
+							<profile>openapi-profile</profile>
 						</profiles>
 						<arguments>
 							<argument>--server.port=8090</argument>
-							<argument>--server.servlet.context-path=/app/generic</argument>
+							<argument>--server.servlet.path=/app/generic</argument>
 						</arguments>
-
 					</configuration>
 				</execution>
+				<!-- Integration test shutdown -->
 				<execution>
 					<id>post-integration-test</id>
+					<phase>post-integration-test</phase>
 					<goals>
 						<goal>stop</goal>
-					</goals>
-				</execution>
-				<execution>
-					<goals>
-						<goal>build-info</goal>
-						<goal>repackage</goal>
 					</goals>
 				</execution>
 			</executions>
