--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.admin</groupId>
 	<artifactId>admin-parent</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1-rc1</version>
 	<packaging>pom</packaging>
 
 	<name>admin</name>
@@ -40,7 +40,7 @@
         <repository>
             <id>ossrh</id>
             <name>CentralRepository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://central.sonatype.com/repositories/snapshots</url>
             <layout>default</layout>
             <snapshots>
             <enabled>true</enabled>
@@ -58,15 +58,15 @@
     </repositories>
 
 	<distributionManagement>
-                <snapshotRepository>
-                        <id>ossrh</id>
-                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-                </snapshotRepository>
-                <repository>
-                        <id>ossrh</id>
-                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-        </distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/api/v1/publisher</url>
+		</repository>
+	</distributionManagement>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -108,6 +108,7 @@
 		<eclipselink.version>2.5.0</eclipselink.version>
 		<hibernate.version>5.2.17.Final</hibernate.version>
 		<hibernate.validator.version>6.0.12.Final</hibernate.validator.version>
+		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 
 		<!-- test -->
 		<junit.version>4.12</junit.version>
@@ -171,7 +172,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.2.1-SNAPSHOT</version>
+				<version>1.2.1-rc1</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -199,7 +200,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
+			<version>1.2.1-rc1</version>
 		</dependency>
 
 	</dependencies>
@@ -400,15 +401,14 @@
                 	</configuration>
                </plugin>
 				<plugin>
-				 	 <groupId>org.sonatype.plugins</groupId>
-				 	 <artifactId>nexus-staging-maven-plugin</artifactId>
-				  	 <version>1.6.14</version>
-				  	 <extensions>true</extensions>
-				  	 <configuration>
-						<serverId>ossrh</serverId>
-						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-						<autoReleaseAfterClose>false</autoReleaseAfterClose>
-				  	</configuration>
+					<groupId>org.sonatype.central</groupId>
+					<artifactId>central-publishing-maven-plugin</artifactId>
+					<version>${central.publishing.maven.plugin.version}</version>
+					<extensions>true</extensions>
+					<configuration>
+						<publishingServerId>ossrh</publishingServerId>
+						<autoPublish>false</autoPublish>
+					</configuration>
 				</plugin>
 
 		 		<plugin>
