--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -8,7 +8,7 @@
 	<name>apitest-masterdata</name>
 	<description>Parent project of MOSIP Admin Services apitests</description>
 	<url>https://github.com/mosip/admin-services</url>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1-rc1</version>
 
 	<licenses>
 		<license>
@@ -49,7 +49,7 @@
 		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
 
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-masterdata-1.2.1-SNAPSHOT-jar-with-dependencies</fileName>
+		<fileName>apitest-masterdata-1.2.1-rc1-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
