--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -86,7 +86,7 @@
 		<kernel.auth.adaptor.version>1.2.1-rc1</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.2.1-rc1</kernel.logger.version>
 		<kernel.crypto.version>1.2.1-rc1</kernel.crypto.version>
-		<kernel.keymanager.version>1.2.1-rc1</kernel.keymanager.version>
+		<kernel.keymanager.version>1.3.0-beta.1</kernel.keymanager.version>
 		<kernel-websubclient-api.version>1.2.1-rc1</kernel-websubclient-api.version>
 	</properties>
 
