--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -172,7 +172,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.2.1-rc1</version>
+				<version>1.2.1-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -200,7 +200,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
-			<version>1.2.1-rc1</version>
+			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
