[MOSIP-41674] central sonatype migration changes
Signed-off-by: techno-467 <prafulrakhade02@gmail.com>

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -54,7 +54,7 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-		</repository>>
+		</repository>
     </repositories>
 
 	<distributionManagement>
