[MOSIP-42163] added installation script for apitest and added keycloak-init-values.yaml and keycloak-init.sh to create mosip-testrig-client
Signed-off-by: Prafulrakhade <prafulrakhade02@gmail.com>

--- a/deploy/apitest-masterdata/values.yaml
+++ b/deploy/apitest-masterdata/values.yaml
@@ -3,5 +3,5 @@ modules:
     enabled: true
     image:
       repository: mosipqa/apitest-masterdata
-      tag: develop
+      tag: 1.2.1.x
       pullPolicy: Always
