--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.admin</groupId>
 	<artifactId>admin-parent</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.2</version>
 	<packaging>pom</packaging>
 
 	<name>admin</name>
@@ -405,7 +405,7 @@
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>${maven.deploy.plugin.version}</version>
 					<configuration>
-						<skip>true</skip>
+						<skip>false</skip>
 					</configuration>
 					<executions>
 						<execution>
@@ -415,7 +415,7 @@
 								<goal>deploy</goal>
 							</goals>
 							<configuration>
-								<skip>true</skip>
+								<skip>false</skip>
 							</configuration>
 						</execution>
 					</executions>
