Updated Pom version and Chart version for post-release changes
Signed-off-by: GitHub <noreply@github.com>

--- a/helm/masterdata/Chart.yaml
+++ b/helm/masterdata/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: masterdata
 description: A Helm chart for MOSIP Masterdata module
 type: application
-version: 12.1.2
+version: 12.1.2-develop
 appVersion: ""
 dependencies:
   - name: common
